contact: Fix social media spacings

--- a/src/modules/contact/SocialMedia/SocialMedia.module.css
+++ b/src/modules/contact/SocialMedia/SocialMedia.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   gap: var(--gap);
-  margin: 1rem 2rem;
+  margin: 0 2rem;
   padding: 2rem 0;
 }
 
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   width: 75%;
-  max-width: 350px;
+  max-width: 150px;
   border-top: 1px solid var(--accent-3);
 }
 
